Minor update - Fixed regex not working with relative paths